fix: spacing adjustments in header and user orders page

--- a/front-end/src/Components/Header/Header.css
+++ b/front-end/src/Components/Header/Header.css
@@ -10,10 +10,11 @@ img {
     padding: 0px 1%;
     background-color: black;
     color: white;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     width: 100%;
     position: fixed;
     z-index: 3;
+    overflow: hidden;
 }
 
 .logo {
